# LARC

./: CMakeLists.txt  Makefile  format.sh  init.sh
check/: CMakeLists.txt  Makefile  check_results.c  print_3Dfield.c  print_field.c
check_results/: Makefile  main.c
file_op/seq/: CMakeLists.txt  check_results.c  initm.c  initv.c  inv_gj.c  pmm1.c  pmm2.c  pmm_d.c  pmv.c  pmv_d.c  test.sh
tests/: CMakeLists.txt  Makefile  dgeaxpxmv.c  doolitle_lu.c  lu.c  powerIt.c  sls_g.c  sls_gj.c  sls_lu.c
utils/: BlockToMatrixUtils.c  BlockToMatrixUtils.h  BlockToVectorUtils.c  BlockToVectorUtils.h  CMakeLists.txt  Makefile  MatrixUtils.c  MatrixUtils.h  VectorUtils.c  VectorUtils.h  algorithms.c  algorithms.h  mvoputils.h
