macro (do_test exe)
  add_executable(${exe} "${exe}.c")
  target_link_libraries(${exe} PRIVATE mvoputils)
  add_test("${exe}_test" ${exe})
endmacro (do_test)

do_test(sls_lu)
do_test(sls_gj)
do_test(sls_g)
add_test(sls_g_test2 sls_g 2)
do_test(lu)
do_test(doolitle_lu)
do_test(dgeaxpxmv)
do_test(powerIt)

